[tool.poetry]
name = "install_tools_dev_python"
version = "0.1.0"
description = "Exemplo de código e Ferramentas para inicializar projeto em Python"
authors = ["heliezer.developer <heliezer.developer@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
